--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  <app-navbar titulo= "Noticias"></app-navbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  
+  
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size-lg="4" size-md="6" size-sm="12" *ngFor= "let not of noticias">
+        <app-card 
+            imagen={{not.imagen}}
+            titulo= {{not.titulo}}
+            subtitulo={{not.subtitulo}}
+            descripcion={{not.descripcion}}
+        ></app-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
+
